samples/_failures_safe/1760959368_dc6032_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a254bd1f.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_a254bd1f.c:168:5: error: expected declaration or statement at end of input
  168 |     free(graph->matrix);
      |     ^~~~
